# localbolt

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRD.md  README.md  ROADMAP.md  SECURITY.md  SIGNAL_SUBTREE.md  SIGNAL_SUBTREE_PIN  start.bat  start.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
docs/: CHANGELOG.md  README.md  STATE.md
interop-tests/tests/: peer_code.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
scripts/: check-core-drift.sh  check-core-single-install.sh  check-core-version-pin.sh  check-lockfile-registry.sh  check-registry-mapping.sh  check-transport-drift.sh  check-transport-single-install.sh  check-transport-version-pin.sh  upgrade-localbolt-core.sh  upgrade-transport-web.sh  verify_signal_subtree.sh
signal/: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
signal/.github/workflows/: ci.yml
signal/docs/: CHANGELOG.md  README.md  STATE.md
signal/interop-tests/: Cargo.toml  README.md
signal/interop-tests/tests/: peer_code.rs
signal/protocol/src/: lib.rs
signal/src/: lib.rs  main.rs  protocol.rs  room.rs  server.rs
src/: lib.rs  main.rs  protocol.rs  room.rs  server.rs
web/: .npmrc  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
web/src/: app.ts  index.css  main.ts
web/src/__tests__/: app.test.ts
web/src/components/: connection-status.ts  (+4 more)
(+37 files in other folders)
