[package]
name = "bolt-rendezvous"
version = "0.1.1"
edition = "2021"
description = "WebSocket signaling server for the Bolt protocol (peer discovery and session coordination)"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt"] }
